# django-qstash

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  compose.dev.yaml  context7.json  pyproject.toml  rav.yaml  tox.ini
.claude/commands/: release.md
.github/workflows/: main.yaml
docs/: api-reference.md  celery-compatibility.md  configuration.md  deployment.md  getting-started.md  index.md  migrating-from-celery.md  new-features.md  security.md  troubleshooting.md
sample_project/: .env.sample  .gitignore  Dockerfile  README.md  manage.py  requirements.txt
sample_project/cfehome/: settings.py  tasks.py  urls.py  views.py
sample_project/cfehome/templates/: index.html
sample_project/notifications/: apps.py  tasks.py  tests.py  urls.py  views.py
sample_project/notifications/management/commands/: qstash_smoke_test.py
sample_project/notifications/templates/notifications/: registration_success.html
src/django_qstash/: __init__.py  callbacks.py  client.py  exceptions.py  handlers.py  settings.py  utils.py
src/django_qstash/app/: __init__.py  base.py  decorators.py
src/django_qstash/db/: models.py
src/django_qstash/discovery/: utils.py
src/django_qstash/management/commands/: clear_stale_results.py  qstash_dlq.py  task_schedules.py
src/django_qstash/results/: admin.py  models.py  services.py  tasks.py
src/django_qstash/results/migrations/: 0003_alter_taskresult_status.py
src/django_qstash/schedules/: admin.py  apps.py  exceptions.py  formatters.py  forms.py  models.py  services.py  validators.py
src/django_qstash/schedules/migrations/: 0004_taskschedule_qstash_delivery_options.py
tests/: test_callbacks.py  test_client.py  test_handlers.py  test_logging.py  test_observability.py  test_results_services.py  test_security.py  test_settings.py  test_utils.py
tests/app/: test_bind.py  test_chaining.py  test_retry.py  test_shared_tasks.py
tests/discovery/: test_cache.py  test_utils.py
tests/management/: test_clear_stale_results.py  test_qstash_dlq.py  test_task_schedules.py
tests/requirements/: compile.py  django-constraints.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py313-django60.txt  py314-django51.txt  py314-django52.txt  py314-django60.txt  update_django_constraints.py
tests/results/: test_clear_stale_results_task.py
tests/schedules/: test_formatters.py  test_forms.py  test_models.py  test_services.py  test_signals.py  test_validators.py
