[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "django-qstash"
version = "0.6.0"
description = "A drop-in replacement for Celery's shared_task with Upstash QStash."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Justin Mitchel", email = "justin@codingforentrepreneurs.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.1",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "django>=4.2",
  "qstash>=3,<4",
  "requests>=2.30",
]
urls.Changelog = "https://github.com/jmitchel3/django-qstash"
urls.Documentation = "https://github.com/jmitchel3/django-qstash"
urls.Funding = "https://github.com/jmitchel3/django-qstash"
urls.Repository = "https://github.com/jmitchel3/django-qstash"

[dependency-groups]
dev = [
  "bump2version",
  "coverage",
  "django-stubs",
  "mypy",
  "pre-commit",
  "pytest",
  "pytest-django",
  "python-decouple",
  "types-requests",
]

[tool.setuptools]
package-data.django_qstash = [ "py.typed" ]

[tool.isort]
profile = "black"
force_single_line = true
src_paths = [
  ".",
  "example",
  "src",
]
add_imports = [
  "from __future__ import annotations",
]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.mypy]
mypy_path = "src/"
namespace_packages = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
plugins = [ "mypy_django_plugin.main" ]
overrides = [
  { module = "tests.*", disallow_untyped_defs = false },
  { module = "qstash.*", ignore_missing_imports = true }
]
show_error_codes = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.pytest]
ini_options.addopts = """\
    --strict-config
    --strict-markers
    --ds=tests.settings
    """
ini_options.xfail_strict = true
ini_options.django_find_project = false

[tool.coverage]
run.branch = true
run.omit = [
  "*/admin.py",
  "*/migrations/*",
  "tests/*",
]
run.parallel = true
run.source = [
  "django_qstash",
]
paths.source = [
  "src/django_qstash",
  ".tox/*/lib/python*/site-packages/django_qstash",
]
report.show_missing = true

[tool.rstcheck]
ignore_directives = [
  "autoclass",
  "autofunction",
]
report_level = "ERROR"
